fix tweet alignment

--- a/web/saito/css-imports/saito-tweet.css
+++ b/web/saito/css-imports/saito-tweet.css
@@ -206,7 +206,7 @@
 
 .tweet-picture {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(49%, 1fr));
   grid-gap: 0.3rem;
   width: 100%;
 }
@@ -314,28 +314,17 @@
     padding-bottom: 0;
     line-height: 2rem;
   }
-  .tweet-picture {
-    grid-template-columns: repeat(auto-fit, minmax(23rem, 1fr));
-  }
   .tweet-notice .saito-address {
     max-width: 70%;
   }
 }
 
 @media screen and (max-width: 529px) {
-  .tweet-picture {
-    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-  }
+
   .tweet-picture>img {
     height: 15rem;
   }
   .preview-img {
     height: 15rem;
-  }
-}
-
-@media screen and (max-width: 375px) {
-  .tweet-picture {
-    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
 }
